[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "octii"
author = "Innatical"
author-email = "contact@innatical.com"
home-page = "https://github.com/innatical/octii.py"
classifiers = [ "Intended Audience :: Developers",
                "License :: OSI Approved :: MIT License",
                "Programming Language :: Python :: 3",  
                "Topic :: Software Development :: Libraries :: Python Modules",]

requires = [
    "requests >=2.25.1; python_version in '3.8 3.9'"
]
description-file = "README.md"
requires-python=">=3.9"